# enet-as-linux

enet-as/: settings.gradle
enet-as/app/: build.gradle
enet-as/app/src/androidTest/java/com/example/enet/: ExampleInstrumentedTest.java
enet-as/app/src/main/: AndroidManifest.xml
enet-as/app/src/main/assets/: enet_512288.param
enet-as/app/src/main/cpp/: CMakeLists.txt  enet-jni.cpp  enet.cpp  enet.h  enet_512288.id.h
enet-as/app/src/main/java/com/example/enet/: ENET.java  MainActivity.java
enet-as/app/src/main/res/layout/: activity_main.xml
enet-as/app/src/main/res/values/: strings.xml
enet-as/app/src/test/java/com/example/enet/: ExampleUnitTest.java
enet-as/gradle/wrapper/: gradle-wrapper.properties
enet-linux/: CMakeLists.txt  enet.cpp  enet.h  main.cpp
